# music

./: .gitignore  AUTHORS  CMakeLists.txt  ChangeLog  Makefile.am  NEWS  README  RELEASE  TODO  aclocal.sh  autogen.sh  config.h.in  configure.ac
CMake/: Configure.cmake  FindPackages.cmake  FindRequired.cmake
CMake/config/: config.h.in  mpi_init_thread.cpp
debian/: README  README.Debian  changelog  control  libmusic-dev.dirs  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  music-doc.doc-base  music.1  rules  shlibs.local.ex
doc/: ChangeLog  Makefile.am  eventselect.1  music-c-int.h  music-manual.tex  music-rfc.bib  music-rfc.tex  scheduling-algorithm.py
examples/: Makefile.am
extras/: Makefile.am
mpidep/: CMakeLists.txt  ChangeLog  Makefile.am  mpidep.cc
music/: ChangeLog  Makefile.am  __init__.py  config.py  music.py
pymusic/: Makefile  Makefile.am  README  helloworld.py  late.h  late.pxd  late.pyx  late_impl.h  music.pyx  port.pxd  port.pxi  port.pyx  pybuffer.cpp  pybuffer.pyx  pymusic.cc  pymusic.cpp  pymusic.pxd  pymusic.pyx  runtime.pxd  runtime.pxi  runtime.pyx  runtimetype.cc  runtimetype.h  setup.pxd  setup.pxi  setup.py  setup.pyx  setuptype.cc  setuptype.h  test.py
pymusic/examples/: event.music  eventlogger.py  eventsource.py  helloworld.music  receivers.py  senders.py
pymusic/music/: music_c.h
rudeconfig/: CMakeLists.txt  ChangeLog  Makefile.am  files.cmake
rudeconfig/src/: AbstractOrganiser.cpp  AbstractOrganiser.h  ConfigImpl.cpp  ConfigImpl.h  File.cpp  File.h  ParserJuly2004.cpp  RealOrganiser.cpp  RealOrganiser.h  Section.cpp  Section.h  SourceDest.cpp  SourceDest.h  Writer.cpp  config.cpp  config.h
src/: BIFO.cc  CMakeLists.txt  ChangeLog  FIBO.cc  Makefile.am  application_map.cc  application_mapper.cc  array_data.cc  arraydata.cc  clock.cc  collector.cc  configuration.cc  connection.cc  connectivity.cc  connector.cc  distributor.cc  error.cc  event_data.cc  event_router.cc  event_routing_map.cc  event_routingmap.cc  files.cmake  index_map.cc  index_map_factory.cc  ioutils.cc  linear_index.cc  linearindex.cc  multibuffer.cc  music-c-c.c  music-c.cc  music-c.h  music.hh  parse.cc  parse.hh  permutation_index.cc  port.cc  runtime.cc  sampler.cc  scheduler.cc  scheduler_agent.cc  (+6 more)
src/music/: BIFO.hh  FIBO.hh  application_graph.hh  application_map.hh  application_mapper.hh  array_data.hh  arraydata.hh  clock.hh  collector.hh  communication.hh  configuration.hh  connection.hh  connectivity.hh  connector.hh  cont_data.hh  data_map.hh  debug.hh  distributor.hh  error.hh  event.hh  event_data.hh  event_router.hh  event_routing_map.hh  event_routingmap.hh  fifo.h  fifo.hh  index_map.hh  index_map_factory.hh  interval.hh  interval_table.hh  interval_tree.hh  ioutils.hh  linear_index.hh  linearindex.hh  message.hh  message_data.hh  multibuffer.hh  music-config.hh.in  ordered_ilist.hh  parse.hh  (+14 more)
test/: CMakeLists.txt  ChangeLog  Makefile.am  README  application1.cc  chain.music  clocksource.cc  cloop.music  coba.cc  const.music  constsource.cc  contclock.music  contdelay.cc  contsink.cc  eventdelay.cc  eventlogger.cc  events.music  events.py  launchtest.cc  launchtest.music  loop.music  makeNeuronGrid.m  makeTestSpikes.m  messages.music  neuronGrid.data  neuronGridLARGE.data  neuronGridPlane.data  parsetest  testallgather.cc  testallgather.music  viewevents.music  vieweventsLARGE.music  vieweventsPlane.music  waveconsumer.cc  wavegenerator.cc  waveproducer.cc  wavetest.music
testsuite/: Makefile  Makefile.am  music_tests.sh.in
testsuite/sanitytests/: Makefile.am  chain.test  cloop.test  const.test  contclock.test  divergence.music  divergence.test  events.music  events.test  fork.music  fork.test  launchtest.test  messages.test  multicomm.test  multiport.test  run_test  wavetest.music
testsuite/unittests/catch/: Makefile.am  tc_application_graph.cc
utils/: CMakeLists.txt  ChangeLog  Makefile.am  VisualiseNeurons.cpp  VisualiseNeurons.h  application_map.cc  application_map.hh  application_mapper.cc  application_mapper.hh  chain.music  clocksource.cc  constsource.cc  contsink.cc  datafile.cc  datafile.h  eventcounter.cc  eventdelay.cc  eventgenerator.cc  events.music  eventselect.cc  eventsink.cc  eventsource.cc  launcher.cc  launchtest.cc  music.cc  parse.cc  parse.hh  viewevents.cpp  vieweventsPlane.music
